errata.tex Updated Acknowledgments...

--- a/errata.tex
+++ b/errata.tex
@@ -181,12 +181,7 @@ The irreducible state counts for maximal entanglement for $n=4$ and
 $p=7$ is about $8.22\times10^{14}$.}
 
 
-\ack{}{We would like to thank John Cardiner for pointing out the need for
-this correction. For counting maximally entangled states for $p=3$
-and $n=4$, we also need to thank to Lilly Endowment, Inc., through
-its support for the Indiana University Pervasive Technology Institute,
-and in part by the Indiana METACyt Initiative. The Indiana METACyt
-Initiative at IU is also supported in part by Lilly Endowment, Inc.}
+\ack{}{We would like to thank John Gardiner for pointing out the need for this correction. This research was supported in part by Lilly Endowment, Inc., through its support for the Indiana University Pervasive Technology Institute, and in part by the Indiana METACyt Initiative. The Indiana METACyt Initiative at IU is also supported in part by Lilly Endowment, Inc.}
 
 
 \section*{References}{}
