--- a/errata.tex
+++ b/errata.tex
@@ -104,7 +104,7 @@ IN 47405, U.S.A}
 \paragraph*{Purity, Product States, and Unentangled States.} The paper correctly identifies unentangled states with product states. In the continuous case, a state has maximal purity iff it is a product state. In the discrete case, product states have maximal purity but the converse does not necessarily hold. 
 \paragraph*{Purity and Maximally Entangled States.} The paper defines maximally entangled states as those whose purity is 0. This definition needs to be modified in the discrete case to avoid identifying as maximally entangled states whose purity is a multiple of the field characteristic.
 
-\bigskip The results in other sections do not depend on Eq.~(27): the corrected version of Sec.5.4 below has no influence on the rest of the article. 
+\bigskip The results in other sections do not depend on Eq.~(27): the corrected version of Sec.~5.4 below has no influence on the rest of the article. 
 
 \subsection{Maximal entanglement}
 
