--- a/errata.tex
+++ b/errata.tex
@@ -104,7 +104,7 @@ IN 47405, U.S.A}
 \paragraph*{Purity, Product States, and Unentangled States.} The paper correctly identifies unentangled states with product states. In the continuous case, a state has maximal purity iff it is a product state. In the discrete case, product states have maximal purity but the converse does not necessarily hold. 
 \paragraph*{Purity and Maximally Entangled States.} The paper defines maximally entangled states as those whose purity is 0. This definition needs to be modified in the discrete case to avoid identifying as maximally entangled states whose purity is a multiple of the field characteristic.
 
-\bigskip The results in other sections do not depend on Eq.~(27): the corrected version of Sec.5.4 below has no influence on the rest of the article. 
+\bigskip The results in other sections do not depend on Eq.~(27): the corrected version of Sec.~5.4 below has no influence on the rest of the article. 
 
 \subsection{Maximal entanglement}
 
@@ -131,18 +131,11 @@ state $\ket{\Psi_{1}}$ over $\ff{3^{2}}$:
 In both cases $\overline{P_{\fh}^j} = 1$ for all $j$: the states are not distinguished by purity. 
 
 $\ket{\Psi_{0}}$ also serves an example that a product state may
-<<<<<<< HEAD
 have $\overline{P_{\fh}}=0$ because of modular arithmetic. In the
 continuous case, $\overline{P_{\fh}}=0$ is equivalent to 
-=======
-have $\overline{P_{\fh}}=0$ because of modular arithmetic. To minimized
-the modular arithmetic effect, we define the maximally entangled states
-by
->>>>>>> branch 'master' of https://github.com/yuttai/Erratum-Geometry-of-discrete-quantum-computing.git
 \begin{equation}
 \forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\label{eq:john}
 \end{equation}
-<<<<<<< HEAD
 Eq. (\ref{eq:john}) defines maximally entangled states over $\ff{p^{2}}$
 as well. In this definition, the Bell states are maximally entangled
 while a normalized state $\ket{\Psi_{2}}$ over $\ff{3^{2}}$:
@@ -151,15 +144,6 @@ while a normalized state $\ket{\Psi_{2}}$ over $\ff{3^{2}}$:
 \end{eqnarray}
 is not maximally entangled although $\overline{P_{\fh}^{j}}=0$ for
 all $j$.
-=======
-For example, consider a normalized state $\ket{\Psi_{2}}$ over $\ff{3^{2}}$:
-\begin{eqnarray}
-\ket{\Psi_{2}} & = & \ket{01}+\ket{10}+\left(-1-\ComplexI\right)\ket{11}
-\end{eqnarray}
-Although $\overline{P_{\fh}^{j}}=0$ for all $j$, $\ket{\Psi_{2}}$
-does not satisfy Eq. (\ref{eq:john}). Therefore, $\ket{\Psi_{2}}$
-is not maximally entangled.
->>>>>>> branch 'master' of https://github.com/yuttai/Erratum-Geometry-of-discrete-quantum-computing.git
 
 Computing some examples for various $n$ and small values of $p$,
 one can verify explicitly that unit-norm product states for $n=2$,
