Slightly modifying the sentence...

--- a/errata.tex
+++ b/errata.tex
@@ -130,15 +130,15 @@ state $\ket{\Psi_{1}}$ over $\ff{3^{2}}$:
 \end{eqnarray}
 In both cases $\overline{P_{\fh}^j} = 1$ for all $j$: the states are not distinguished by purity. 
 
-$\ket{\Psi_{0}}$ also serves an example that a product state may
-have $\overline{P_{\fh}}=0$ because of modular arithmetic. In the
-continuous case, $\overline{P_{\fh}}=0$ is equivalent to 
+$\ket{\Psi_{0}}$ also serves an example that a product state has
+$\overline{P_{\fh}}=0$ because of modular arithmetic. In the continuous
+case, $\overline{P_{\fh}}=0$ is equivalent to 
 \begin{equation}
 \forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\label{eq:john}
 \end{equation}
 Eq. (\ref{eq:john}) defines maximally entangled states over $\ff{p^{2}}$
-as well. In this definition, the Bell states are maximally entangled
-while a normalized state $\ket{\Psi_{2}}$ over $\ff{3^{2}}$:
+as well. From this definition, the Bell states are maximally entangled,
+while a normalized state $\ket{\Psi_{2}}$ over $\ff{3^{2}}$: 
 \begin{eqnarray}
 \ket{\Psi_{2}} & = & \ket{01}+\ket{10}+\left(-1-\ComplexI\right)\ket{11}
 \end{eqnarray}
