--- a/errata.lyx
+++ b/errata.lyx
@@ -276,8 +276,11 @@ The results in other sections do not depend on Eq.
 \begin_inset space ~
 \end_inset
 
-(27): the corrected version of Sec.5.4 below has no influence on the rest
- of the article.
+(27): the corrected version of Sec.
+\begin_inset space ~
+\end_inset
+
+5.4 below has no influence on the rest of the article.
 \end_layout
 
 \begin_layout Subsection
@@ -356,21 +359,16 @@ In both cases
 \begin_inset Formula $\ket{\Psi_{0}}$
 \end_inset
 
- also serves an example that a product state may have 
+ also serves an example that a product state has 
 \begin_inset Formula $\overline{P_{\fh}}=0$
 \end_inset
 
  because of modular arithmetic.
-<<<<<<< HEAD
  In the continuous case, 
 \begin_inset Formula $\overline{P_{\fh}}=0$
 \end_inset
 
  is equivalent to 
-=======
- To minimized the modular arithmetic effect, we define the maximally entangled
- states by
->>>>>>> branch 'master' of https://github.com/yuttai/Erratum-Geometry-of-discrete-quantum-computing.git
 \begin_inset Formula 
 \begin{equation}
 \forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\label{eq:john}
@@ -378,27 +376,21 @@ In both cases
 
 \end_inset
 
-<<<<<<< HEAD
 Eq.
  (
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "eq:john"
 
-=======
-For example, consider a normalized state 
-\begin_inset Formula $\ket{\Psi_{2}}$
->>>>>>> branch 'master' of https://github.com/yuttai/Erratum-Geometry-of-discrete-quantum-computing.git
 \end_inset
 
-<<<<<<< HEAD
 ) defines maximally entangled states over 
 \begin_inset Formula $\ff{p^{2}}$
 \end_inset
 
  as well.
- In this definition, the Bell states are maximally entangled while a normalized
- state 
+ From this definition, the Bell states are maximally entangled, while a
+ normalized state 
 \begin_inset Formula $\ket{\Psi_{2}}$
 \end_inset
 
@@ -406,7 +398,7 @@ For example, consider a normalized state
 \begin_inset Formula $\ff{3^{2}}$
 \end_inset
 
-:
+: 
 \begin_inset Formula 
 \begin{eqnarray}
 \ket{\Psi_{2}} & = & \ket{01}+\ket{10}+\left(-1-\ComplexI\right)\ket{11}
@@ -423,46 +415,6 @@ is not maximally entangled although
 \end_inset
 
 .
-=======
- over 
-\begin_inset Formula $\ff{3^{2}}$
-\end_inset
-
-:
-\begin_inset Formula 
-\begin{eqnarray}
-\ket{\Psi_{2}} & = & \ket{01}+\ket{10}+\left(-1-\ComplexI\right)\ket{11}
-\end{eqnarray}
-
-\end_inset
-
-Although 
-\begin_inset Formula $\overline{P_{\fh}^{j}}=0$
-\end_inset
-
- for all 
-\begin_inset Formula $j$
-\end_inset
-
-, 
-\begin_inset Formula $\ket{\Psi_{2}}$
-\end_inset
-
- does not satisfy Eq.
- (
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "eq:john"
-
-\end_inset
-
-).
- Therefore, 
-\begin_inset Formula $\ket{\Psi_{2}}$
-\end_inset
-
- is not maximally entangled.
->>>>>>> branch 'master' of https://github.com/yuttai/Erratum-Geometry-of-discrete-quantum-computing.git
 \end_layout
 
 \begin_layout Standard
@@ -690,6 +642,7 @@ status collapsed
 \end_layout
 
 \begin_layout Standard
+ 
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 bibfiles "gardinerbib"
