Modify a little to make sure errata.tex can compile in my laptop...

--- a/errata.lyx
+++ b/errata.lyx
@@ -1,9 +1,25 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
+#LyX file created by tex2lyx 2.1
 \lyxformat 474
 \begin_document
 \begin_header
 \textclass iopart
 \begin_preamble
+\usepackage{amstext}
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% LyX specific LaTeX commands.
+%% Because html converters don't know tabularnewline
+\providecommand{\tabularnewline}{\\}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
+\usepackage{iopams}
+\usepackage{setstack}
+\usepackage{enumitem}% customizable list environments
+\newlength{\lyxlabelwidth}      % auxiliary length 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
 \usepackage{amsfonts}
 \usepackage{amsbsy}
 \usepackage[usenames,dvipsnames]{xcolor}
@@ -41,6 +57,10 @@
 \addtocounter{equation}{39}
 \addtocounter{section}{5}
 \addtocounter{subsection}{3}
+
+
+
+
 \end_preamble
 \use_default_options false
 \maintain_unincluded_children false
@@ -113,13 +133,11 @@ Erratum: Geometry of discrete quantum computing
 \end_layout
 
 \begin_layout Author
-Andrew J.
- Hanson
+Andrew J. Hanson
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -135,8 +153,7 @@ Amr Sabry
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -148,8 +165,7 @@ Department of Mathematics, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Standard
@@ -162,7 +178,6 @@ status collapsed
 
 \begin_layout Plain Layout
 
-
 \backslash
 /
 \end_layout
@@ -170,13 +185,14 @@ status collapsed
 \end_inset
 
 
+\family default
+\series default
 \shape default
 : 
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 {
 \end_layout
 
@@ -187,7 +203,6 @@ status collapsed
 status collapsed
 
 \begin_layout Plain Layout
-
 
 \backslash
 today
@@ -200,7 +215,6 @@ today
 status collapsed
 
 \begin_layout Plain Layout
-
 }
 \end_layout
 
@@ -213,35 +227,33 @@ status collapsed
 \noindent
 We correct Sec.
 \begin_inset space ~
+
 \end_inset
 
 5.4 of our paper
 \begin_inset space ~
+
 \end_inset
 
 
 \begin_inset CommandInset citation
 LatexCommand cite
+after ""
 key "geometry"
 
 \end_inset
 
-.
- There are several related mistakes that all stem from an incorrect use
- of Eq.
+. There are several related mistakes that all stem from an incorrect use of Eq.
 \begin_inset space ~
+
 \end_inset
 
-(27) in a discrete setting with modular arithmetic.
- Eq.
+(27) in a discrete setting with modular arithmetic. Eq.
 \begin_inset space ~
+
 \end_inset
 
-(27) defines purity from which the definitions of unentangled, partially
- entangled, and maximally entangled states were derived in the field of
- complex numbers.
- In finite fields, the definitions are more subtle.
- 
+(27) defines purity from which the definitions of unentangled, partially entangled, and maximally entangled states were derived in the field of complex numbers. In finite fields, the definitions are more subtle. 
 \end_layout
 
 \begin_layout Paragraph*
@@ -249,12 +261,7 @@ Purity, Product States, and Unentangled States.
 \end_layout
 
 \begin_layout Standard
-The paper correctly identifies unentangled states with product states.
- In the continuous case, a state has maximal purity iff it is a product
- state.
- In the discrete case, product states have maximal purity but the converse
- does not necessarily hold.
- 
+The paper correctly identifies unentangled states with product states. In the continuous case, a state has maximal purity iff it is a product state. In the discrete case, product states have maximal purity, but the converse does not necessarily hold. 
 \end_layout
 
 \begin_layout Paragraph*
@@ -262,22 +269,22 @@ Purity and Maximally Entangled States.
 \end_layout
 
 \begin_layout Standard
-The paper defines maximally entangled states as those whose purity is 0.
- This definition needs to be modified in the discrete case to avoid identifying
- as maximally entangled states whose purity is a multiple of the field character
-istic.
+The paper defines maximally entangled states as those whose purity is 0. This definition needs to be modified in the discrete case to avoid identifying as maximally entangled states whose purity is a multiple of the field characteristic.
 \end_layout
 
 \begin_layout Standard
+
 \begin_inset VSpace bigskip
 \end_inset
 
 The results in other sections do not depend on Eq.
 \begin_inset space ~
+
 \end_inset
 
 (27): the corrected version of Sec.
 \begin_inset space ~
+
 \end_inset
 
 5.4 below has no influence on the rest of the article.
@@ -288,19 +295,17 @@ Maximal entanglement
 \end_layout
 
 \begin_layout Standard
-In the case of finite fields, we need to modify this definition because
- modular arithmetic confuses some of the identifications.
+In the case of finite fields, we need to modify this definition because modular arithmetic confuses some of the identifications.
 \end_layout
 
 \begin_layout Standard
-For instance, although product states and maximal purity can be identified
- when using complex arithmetic, there exist, in the discrete case, non-product
- states that also have maximal purity.
+For instance, although product states and maximal purity can be identified when using complex arithmetic, there exist, in the discrete case, non-product states that also have maximal purity.
 \end_layout
 
 \begin_layout Standard
 The first step in adapting Eq.
 \begin_inset space ~
+
 \end_inset
 
 (27) to the discrete case is to eliminate the 
@@ -308,11 +313,10 @@ The first step in adapting Eq.
 \end_inset
 
  factor to avoid dividing by zero: 
-\begin_inset Formula 
-\begin{equation}
-\overline{P_{\fh}}=\sum\limits _{j=1}^{n}\overline{P_{\fh}^{j}},\qquad\mbox{with~}\overline{P_{\fh}^{j}}=\sum\limits _{\mu=x,y,z}\langle\sigma_{\mu}^{j}\rangle^{2}
+\begin_inset Formula \begin{equation}
+\overline{P_{\fh}}=\sum\limits _{j=1}^{n}\overline{P_{\fh}^{j}}, \qquad\mbox{with~}
+\overline{P_{\fh}^j} = \sum\limits _{\mu=x,y,z}\langle\sigma_{\mu}^{j}\rangle^{2}\ ,
 \end{equation}
-
 \end_inset
 
 where 
@@ -336,16 +340,14 @@ For example, consider the normalized product state
 \end_inset
 
 : 
-\begin_inset Formula 
-\begin{eqnarray}
-\ket{\Psi_{0}} & = & \ket{0}\otimes\frac{\ket{0}-\ket{1}}{1-\ComplexI}\otimes\frac{\ket{0}-\ket{1}}{1-\ComplexI}\\
-\ket{\Psi_{1}} & = & \ket{011}+\ket{100}+\ket{101}+\ket{110}
+\begin_inset Formula \begin{eqnarray}
+\ket{\Psi_{0}} & = & \ket{0}\otimes\frac{\ket{0}-\ket{1}}{1-\ComplexI}\otimes\frac{\ket{0}-\ket{1}}{1-\ComplexI}\ ,\\
+\ket{\Psi_{1}} & = & \ket{011}+\ket{100}+\ket{101}+\ket{110}\ .
 \end{eqnarray}
-
 \end_inset
 
 In both cases 
-\begin_inset Formula $\overline{P_{\fh}^{j}}=1$
+\begin_inset Formula $\overline{P_{\fh}^j} = 1$
 \end_inset
 
  for all 
@@ -356,6 +358,7 @@ In both cases
 \end_layout
 
 \begin_layout Standard
+
 \begin_inset Formula $\ket{\Psi_{0}}$
 \end_inset
 
@@ -363,21 +366,17 @@ In both cases
 \begin_inset Formula $\overline{P_{\fh}}=0$
 \end_inset
 
- because of modular arithmetic.
- In the continuous case, 
+ because of modular arithmetic. In the continuous case, 
 \begin_inset Formula $\overline{P_{\fh}}=0$
 \end_inset
 
  is equivalent to 
-\begin_inset Formula 
-\begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\label{eq:john}
+\begin_inset Formula \begin{equation}
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\label{eq:john}\ .
 \end{equation}
-
 \end_inset
 
-Eq.
- (
+Eq. (
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "eq:john"
@@ -388,9 +387,7 @@ reference "eq:john"
 \begin_inset Formula $\ff{p^{2}}$
 \end_inset
 
- as well.
- From this definition, the Bell states are maximally entangled, while a
- normalized state 
+ as well. From this definition, the Bell states are maximally entangled, while a normalized state 
 \begin_inset Formula $\ket{\Psi_{2}}$
 \end_inset
 
@@ -398,15 +395,7 @@ reference "eq:john"
 \begin_inset Formula $\ff{3^{2}}$
 \end_inset
 
-: 
-\begin_inset Formula 
-\begin{eqnarray}
-\ket{\Psi_{2}} & = & \ket{01}+\ket{10}+\left(-1-\ComplexI\right)\ket{11}
-\end{eqnarray}
-
-\end_inset
-
-is not maximally entangled although 
+ is not maximally entangled although 
 \begin_inset Formula $\overline{P_{\fh}^{j}}=0$
 \end_inset
 
@@ -414,7 +403,13 @@ is not maximally entangled although
 \begin_inset Formula $j$
 \end_inset
 
-.
+, where 
+\begin_inset Formula \begin{eqnarray}
+\ket{\Psi_{2}} & = & \ket{01}+\ket{10}+\left(-1-\ComplexI\right)\ket{11}\ .
+\end{eqnarray}
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -435,11 +430,9 @@ Computing some examples for various
 \end_inset
 
  occur with frequency 
-\begin_inset Formula 
-\begin{equation}
-(p+1)p^{2}(p-1)^{2}=\{144,14112,145200,2339280,\ldots\}\ ,
+\begin_inset Formula \begin{equation}
+(p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
 \end{equation}
-
 \end_inset
 
 and for general 
@@ -459,18 +452,16 @@ The irreducible state counts are reduced by
 \end_inset
 
 , giving 
-\begin_inset Formula 
-\begin{equation}
-p^{2}(p-1)^{2}=\{36,1764,12100,116964,\ldots\}\ ,
+\begin_inset Formula \begin{equation}
+p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
 \end{equation}
-
 \end_inset
 
 and in general for 
 \begin_inset Formula $n$
 \end_inset
 
--qubits, 
+-qubits, there are 
 \begin_inset Formula $p^{n}\left(p-1\right)^{n}$
 \end_inset
 
@@ -478,13 +469,10 @@ and in general for
 \end_layout
 
 \begin_layout Standard
-Repeating the computation we find maximally entanglement states with frequencies
- for two qubits of 
-\begin_inset Formula 
-\begin{equation}
-p\left(p^{2}-1\right)\left(p+1\right)=\left\{ 96,2688,15840,136800,\ldots\right\} 
+Repeating the computation, we find maximally entanglement states with frequencies for two qubits of 
+\begin_inset Formula \begin{equation}
+p\left(p^{2}-1\right)\left(p+1\right)=\left\{ 96,2688,15\,840,136\,800,\ldots\right\} \ .
 \end{equation}
-
 \end_inset
 
 The irreducible state counts for maximal entanglement are reduced by 
@@ -496,36 +484,32 @@ The irreducible state counts for maximal entanglement are reduced by
 \end_inset
 
  
-\begin_inset Formula 
-\begin{equation}
-p\left(p^{2}-1\right)=\left\{ 24,336,1320,6840,\ldots\right\} 
+\begin_inset Formula \begin{equation}
+p\left(p^{2}-1\right)=\left\{ 24,336,1320,6840,\ldots\right\} \ .
 \end{equation}
-
 \end_inset
 
 For three-qubits, there are 
 \begin_inset Formula $p^{3}\left(p^{4}-1\right)\left(p+1\right)$
 \end_inset
 
- instances of pure maximally entangled states.
- For four-qubits and 
+ instances of pure maximally entangled states. For four-qubits and 
 \begin_inset Formula $p=3$
 \end_inset
 
 , there are 
-\begin_inset Formula $2195538048$
+\begin_inset Formula $2195\,538\,048$
 \end_inset
 
- instances of pure maximally entangled states, while the general formula
- for four-qubit states remains unclear.
+ instances of pure maximally entangled states, while the general formula for four-qubit states remains unclear.
 \end_layout
 
 \begin_layout Standard
+
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 
 \backslash
 yutsung{
@@ -534,12 +518,10 @@ yutsung{
 \end_inset
 
  
-\begin_inset Formula 
-\begin{eqnarray*}
-2195538048 & = & 4\cdot548884512\\
-548884512 & = & 2^{5}\cdot3^{7}\cdot11\cdot23\cdot31
+\begin_inset Formula \begin{eqnarray*}
+2195\,538\,048 & = & 4\cdot548\,884\,512\ ,\\
+548\,884\,512 & = & 2^{5}\cdot3^{7}\cdot11\cdot23\cdot31\ .
 \end{eqnarray*}
-
 \end_inset
 
 The irreducible state counts for maximal entanglement for 
@@ -559,7 +541,6 @@ The irreducible state counts for maximal entanglement for
 status collapsed
 
 \begin_layout Plain Layout
-
 }
 \end_layout
 
@@ -569,11 +550,11 @@ status collapsed
 \end_layout
 
 \begin_layout Standard
+
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 
 \backslash
 ack
@@ -586,7 +567,6 @@ ack
 status collapsed
 
 \begin_layout Plain Layout
-
 {}
 \end_layout
 
@@ -597,24 +577,16 @@ status collapsed
 status collapsed
 
 \begin_layout Plain Layout
-
 {
 \end_layout
 
 \end_inset
 
-We would like to thank John Gardiner for pointing out the need for this
- correction.
- This research was supported in part by Lilly Endowment, Inc., through its
- support for the Indiana University Pervasive Technology Institute, and
- in part by the Indiana METACyt Initiative.
- The Indiana METACyt Initiative at IU is also supported in part by Lilly
- Endowment, Inc.
+We would like to thank John Gardiner for pointing out the need for this correction. This research was supported in part by Lilly Endowment, Inc., through its support for the Indiana University Pervasive Technology Institute, and in part by the Indiana METACyt Initiative. The Indiana METACyt Initiative at IU is also supported in part by Lilly Endowment, Inc.
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 }
 \end_layout
 
@@ -628,11 +600,11 @@ References
 \end_layout
 
 \begin_layout Standard
+
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 {}
 \end_layout
 
